第三步判断 代码优化 bug修改

--- a/step5.html
+++ b/step5.html
@@ -1256,6 +1256,7 @@
                         return false;
                     }
                 }
+                return true;
             }
             //第二步底棱归位
             function step2(){
